--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     text-align: center;
     font-family: Arial, sans-serif;
+    background-color: #def8e5;
 }
 
 .container {
@@ -12,10 +13,44 @@ body {
     margin-top: 20px;
 }
 
-.upgrades, .cookie {
+.upgrades {
     width: 45%;
+    background-color: #f9f9f9;
+    border: 3px solid black;
+    padding: 10px;
+    border-radius: 5px;
 }
 
+.upgrades tr {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.upgrades tr:hover {
+    background-color: #e0e0e0;
+}
+
+.upgrades td {
+    flex: 2;
+    text-align: left;
+}
+
+.upgrades button {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+}
+
+.upgrades button:hover {
+    background-color: #45a049;
+}
 
 .cookie {
     width: 40%;
@@ -27,19 +62,17 @@ body {
 }
 
 .cookie img {
-    width: 300px;
     cursor: pointer;
-    padding-top: 10;
+    padding-top: 10px;
+    width: 200px;
 }
 
 .cookie img:hover {
     transition: transform 0.3s ease;
-
-    
 }
 
 .cookie img:active {
-    transform: scale(0.95)
+    transform: scale(0.95);
 }
 
 .items {
@@ -47,6 +80,91 @@ body {
     padding-top: 10px;
 }
 
-.upgrades {
-    padding-right: 20px;
+.info {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.itemshop {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    
+}
+
+.itemshop tr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.itemshop td {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+
+}
+
+.itemshop button:hover {
+    background-color: #e0e0e0;
+}
+
+.itemshop img {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
+
+.itemshop button {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+}
+
+.itemshop button:hover {
+    background-color: #45a049;
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 764px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .upgrades, .items {
+        width: 90%;
+    }
+
+    .cookie {
+        position: static;
+        width: 100%;
+    }
+
+    .itemshop {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 300px) {
+    .upgrades button, .itemshop button {
+        padding: 5px;
+        font-size: 14px;
+    }
+
+    .itemshop img {
+        width: 25px;
+        height: 25px;
+    }
 }
