--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,19 @@
 body {
     text-align: center;
     font-family: Arial, sans-serif;
-    background-color: #def8e5;
+    background-image: linear-gradient(to bottom right, #f9fffd, #b1ffb1);
+    
+}
+
+.cookieclicks {
+    font-size: 1.3em;
+}
+
+.rebirthcost {
+    font-size: 1.3em;
+    background-color: #0a0a0a;
+    color: white;
+    border-radius: 5px;
 }
 
 .container {
@@ -21,6 +33,9 @@ body {
     border-radius: 5px;
 }
 
+.upgradecost {
+    padding-left: 20%;
+}
 .upgrades tr {
     display: flex;
     align-items: center;
@@ -64,7 +79,7 @@ body {
 .cookie img {
     cursor: pointer;
     padding-top: 10px;
-    width: 200px;
+    width: 400px;
 }
 
 .cookie img:hover {
@@ -89,10 +104,24 @@ body {
     background-color: #f9f9f9;
 }
 
+.info th {
+    width: 100%;
+    justify-content: center;
+}
+
 .itemshop {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    background-color: #f9f9f9;
+    border: 3px solid black;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    gap: 5%;
+    margin-left: 35%;
+    flex-direction:row;
+    flex-wrap: wrap;
+  
     
 }
 
@@ -104,14 +133,16 @@ body {
     border: 1px solid black;
     border-radius: 5px;
     background-color: #f9f9f9;
+    width: 100%;
 }
 
 .itemshop td {
     display: flex;
     align-items: center;
     padding: 10px;
-
+    width: 100%;
 }
+
 
 .itemshop button:hover {
     background-color: #e0e0e0;
@@ -137,10 +168,25 @@ body {
 }
 
 /* Media Queries for Responsiveness */
-@media (max-width: 764px) {
+@media (max-width: 1282px) {
+    .container {
+        width: 90%;
+    }
+
+    .itemshop {
+        width: 50%;
+        margin-left: 25%
+    }
+}
+
+@media (max-width: 880px) {
     .container {
         flex-direction: column;
         align-items: center;
+    }
+
+    .info {
+        margin-left: 10%
     }
 
     .upgrades, .items {
@@ -151,13 +197,19 @@ body {
         position: static;
         width: 100%;
     }
+    
+    .cookie img {
+        width: 300px;
+    }
 
     .itemshop {
-        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+        margin-left: 5%;
     }
+
 }
 
-@media (max-width: 300px) {
+@media (max-width: 700px) {
     .upgrades button, .itemshop button {
         padding: 5px;
         font-size: 14px;
@@ -167,4 +219,7 @@ body {
         width: 25px;
         height: 25px;
     }
+
+
 }
+
